// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useBooksInfinite should return data 1`] = `
Object {
  "data": Array [
    Array [
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
      Object {
        "cover": "https://loremflickr.com/1280/1910/sports",
        "desc": Object {
          "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
        },
        "id": "bk8992",
        "mate": Object {
          "author": "Letitia",
        },
        "rates": 62,
        "tags": Array [
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
          "quia doloremque",
        ],
        "title": "catch",
      },
    ],
  ],
  "error": undefined,
  "isLoading": false,
  "isValidating": false,
  "mutate": [Function],
  "setSize": [Function],
  "size": 1,
}
`;

exports[`useQuery should return data 1`] = `
Object {
  "data": Array [
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
    Object {
      "cover": "https://loremflickr.com/1280/1910/sports",
      "desc": Object {
        "text": "Facilis et dolorem non omnis. Neque velit quis dolore similique accusantium. Adipisci rerum dolorum cum et totam eveniet culpa qui. Ad facere facere rerum distinctio atque consequatur amet iure. Voluptas dolorem ipsa suscipit. Quam voluptatibus deserunt omnis sint similique cum aliquid est sunt. Nemo ut inventore est ut ut. Ea dolores ipsum ea recusandae. Et facere cumque quae fuga dolor ipsa dolor. Unde sit cupiditate.",
      },
      "id": "bk8992",
      "mate": Object {
        "author": "Letitia",
      },
      "rates": 62,
      "tags": Array [
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
        "quia doloremque",
      ],
      "title": "catch",
    },
  ],
  "error": undefined,
  "isLoading": false,
  "isValidating": false,
  "mutate": [Function],
}
`;
